--- a/animated-login-page/animated.html
+++ b/animated-login-page/animated.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Login Page</title>
-    <link rel="stylesheet" href="./animated.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="./animated.css">
+</head>
+<body>
     <div class="trees"></div>
     
     <div class="leaf1"></div>
@@ -22,25 +22,22 @@
     <div class="bird1"></div>
 
     <div class="container">
-      <div class="form">
-        <h1>Sing In</h1>
-        <div class="input">
-          <input type="text" placeholder="Username" required />
-                 <input type="text" placeholder="Password" required />
+        <div class="form">
+            <h1>Sign In</h1>
+            <div class="input">
+                <input type="text" placeholder="Username" required />
+                <input type="password" placeholder="Password" required />
+            </div>
         </div>
-      </div>
-      <button class="login">Login</button>
-      <div class="forget-sing">
-        <a href="#">Forget Password</a>
-        <a href="#">Sing Up</a>
-      </div>
+        <!-- Login düğmesi eklendi -->
+        <button class="login">Login</button>
+        <div class="forget-sing">
+            <a href="#">Forget Password</a>
+            <a href="#">Sign Up</a>
+        </div>
     </div>
-    <audio
-      id="bck-music"
-      src="./audio/Cem Adrian - Hüzün Kovan Kuşu.mp3"
-      autoplay
-      loop
-    ></audio>
+    
+    <audio id="bck-music" src="./audio/Cem Adrian - Hüzün Kovan Kuşu.mp3" loop></audio>
     <script src="./app.js"></script>
-  </body>
+</body>
 </html>
